--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,40 @@
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Regular.woff2') format('woff');
+  font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Light.woff2') format('woff');
+  font-display: swap;
+  font-weight: 300;
+  font-style: light;
+}
 
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Medium.woff2') format('woff');
+  font-display: swap;
+  font-weight: 600;
+  font-style: medium;
+}
 
+@font-face {
+  font-family: 'Heebo';
+  src: url('fonts/Heebo-Bold.woff2') format('woff');
+  font-display: swap;
+  font-weight: 700;
+  font-style: bold;
+}
 
 body {
-    margin: 0;
-    font-family: 'Heebo';
-    padding-top: 80px;
+  margin: 0;
+  font-family: 'Heebo', sans-serif;
+  padding-top: 80px;
 }
+
 
 .container {
     width: 1440px;
